# cis194-templates

./: .gitignore  .hlint.yaml  LICENSE  LICENSE.md  Makefile  README.md  cis194-templates.cabal  package.yaml  shell.nix  stack.yaml
.circleci/: config.yml
app/Homework07/: Main.hs
homework01/: README.md  basis.cabal
homework01/src/: Basis.hs
homework02/: README.md  data-types.cabal
homework02/src/: LogAnalysis.hs
homework03/: README.md  rec-poly.cabal  stack.yaml
homework03/src/: Golf.hs
homework04/: README.md  wholemeal.cabal
homework04/src/: Wholemeal.hs
homework05/: README.md  calc.cabal  data-types.cabal
homework05/src/: Calc.hs  Parser.hs  StackVM.hs
homework05/test/examples/: Main.hs
homework06/: README.md  fibonacci.cabal
homework06/src/: Fibonacci.hs
homework06/test/examples/: Main.hs
homework07/: README.md  editor.cabal
homework07/src/: Editor.hs  JoinList.hs  Scrabble.hs  StringBuffer.hs
homework08/: README.md  party.cabal
homework08/src/: Employee.hs  Party.hs
homework10/: README.md  aparser.cabal
homework10/src/: AParser.hs
homework11/: README.md  sexpr.cabal
homework11/src/: AParser.hs  SExpr.hs
homework12/: README.md  risk.cabal
homework12/src/: Risk.hs
src/Homework01/: Basis.hs
src/Homework02/: Log.hs  LogAnalysis.hs
src/Homework03/: Golf.hs
src/Homework04/: Wholemeal.hs
src/Homework05/: Calc.hs  ExprT.hs  Parser.hs  StackVM.hs
src/Homework06/: Fibonacci.hs
src/Homework07/: Buffer.hs  Editor.hs  JoinList.hs  Scrabble.hs  Sized.hs  StringBuffer.hs
src/Homework08/: Employee.hs  Party.hs
(+17 files in other folders)
