name: data-types
version: 0.1.0
build-type: Simple
cabal-version: >= 1.10


library
  hs-source-dirs: src
  exposed-modules:
    ExprT
    Parser
    StackVM
    Calc
  build-depends:
  build-depends:
      mtl
    , base >= 4.7 && < 5
    , containers
  ghc-options: -Wall
  default-language: Haskell2010

test-suite examples
  type: exitcode-stdio-1.0
  hs-source-dirs: test/examples
  main-is: Main.hs
  ghc-options: -Wall -threaded
  build-depends:
      base
    , data-types
    , mtl
    , doctest >= 0.10
  default-language: Haskell2010

test-suite suggestions
  type: exitcode-stdio-1.0
  hs-source-dirs: test/suggestions
  main-is: Main.hs
  ghc-options: -Wall -threaded
  build-depends:
      base
    , mtl
    , hlint >= 1.9
  default-language: Haskell2010
